css and contrast correction, adding html and head tags

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,16 +78,30 @@ body {
 	margin-top: 1em;
 	margin-bottom: 60px;
 	font-size: 30px;
+	/* ajout propriété h3 pour h2 */
+	margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 .about-me__introduction {
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	/* ajout font-size line-height et margin */
+	font-size: 1rem !important;
+	margin: 0 0 0.5rem;
+	line-height: 1.2;
 }
 #about-me p {
 	width: 80%;
 	font-size: 14px;
+}
+
+/* modification propriété h3 vers h2 */
+h2 {
+	font-size: calc(1.3rem + 0.6vw);
 }
 
 #gallery {
@@ -101,9 +115,10 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
 	background-color: #BEB45A;
 	border-radius:0 ;
+	/* changement couleur constraste et accessibilité */
+	color: #000;
 }
 .nav-pills .nav-link {
 	color: #000
@@ -147,6 +162,10 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
+	/* modifitcation style h1 */
+	font-size: calc(1.375rem + 1.5vw);
+	margin-bottom: 0.5;
+	line-height: 1.2;
 
 }
 .quote__author {
